# chainlit-crew-adapter

./: .gitignore  ADAPTER_APPROACH.md  README.md  pyproject.toml
chainlit_crew_adapter/: __init__.py  adapter.py  events.py  human_input.py  step_renderer.py
docs/: index.html
examples/: __init__.py  ask_user_demo.py  steps_demo.py
examples/crews/: __init__.py
examples/crews/ask_user_demo/: __init__.py  crew.py
examples/crews/steps_demo/: __init__.py  crew.py  tools.py
